--- a/index.html
+++ b/index.html
@@ -210,4 +210,7 @@
 
 </html>
 
-<!--Change file pathway for background image etc-->
+<!--Change file pathway for background image etc
+add project board and wireframes. User stories. finish readme
+colour scheme and design
+-->
